--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,37 +1,5 @@
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333; 
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 60px;
-}
-
-.header {
-    background-color: #3498db;
-    color: #fff;
-    padding: 20px;
-    width: 100%;
-    text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    position: relative;
-}
-
-.leaderboard {
-    max-width: 600px;
-    margin: 20px auto;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    color: #333;
+:root {
+    --p-color: #3498db;
 }
 
 h1 {
@@ -52,46 +20,72 @@ li {
     align-items: center; 
 }
 
-.name {
-    font-weight: bold;
-}
-
-.score {
-    color: #3498db; 
-}
-
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    color: #000000; 
+    color: #333; 
+    scroll-behavior: smooth;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 60px; 
-}
-
-.header {
-    background-color: #3498db; 
+header {
+    background-color: var(--p-color);
     color: #fff;
     padding: 20px;
-    width: 100%;
+    width: 100vw;
+    height: 70px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    display: flex;
+    align-items: center;
+    z-index: 11111;
+}
+
+#main-title {
+    margin-left: 26vw;
 }
 
 .logo {
-    width: 200px; 
-    margin-right: 10px;
-    position: absolute;
-    left: 10px;
+    width: 200px;
+}
+
+.main-content {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.graph {
+    min-height: 80vh;
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+}
+
+.graph .leaderboard {
+    min-height: 90vh;
+}
+
+.img-grafo {
+    scale: 0.8;
+
+}
+
+.container {
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 60px;
 }
 
 .leaderboard {
+    min-height: 30vh;
+    min-width: 31rem;
     max-width: 600px;
     margin: 20px auto;
     background-color: #fff;
@@ -99,25 +93,7 @@ body {
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    color: #333; 
-}
-
-h1 {
-    text-align: center;
     color: #333;
-}
-
-ol {
-    list-style: none;
-    padding: 0;
-}
-
-li {
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
 }
 
 .name {
@@ -125,6 +101,5 @@ li {
 }
 
 .score {
-    color: #3498db; 
+    color: var(--p-color); 
 }
-
